downgrade to jre 1.4